--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-parallax-tilt": "^1.5.86",
+    "react-scripts": "4.0.2",
+    "react-tsparticles": "^1.39.0",
+    "tachyons": "^4.12.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
