--- a/package.json
+++ b/package.json
@@ -1,55 +1,155 @@
 {
   
   "name": "facerecognitionbrain",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "homepage": "http://krownlesskev.github.io/FaceRecognitionBrain",
+  
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "bcrypt-nodejs": "^0.0.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "knex": "^1.0.2",
-    "nodemon": "^2.0.15",
-    "pg": "^8.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-parallax-tilt": "^1.5.86",
-    "react-scripts": "4.0.2",
-    "react-tsparticles": "^1.39.0",
-    "tachyons": "^4.12.0",
-    "web-vitals": "^2.1.3"
+  
+    
+  "@testing-library/jest-dom": "^5.16.1",
+  
+    
+  "@testing-library/react": "^12.1.2",
+  
+    
+  "@testing-library/user-event": "^13.5.0",
+  
+    
+  "bcrypt-nodejs": "^0.0.3",
+  
+    
+  "cors": "^2.8.5",
+  
+    
+  "express": "^4.17.2",
+  
+    
+  "knex": "^1.0.2",
+  
+    
+  "nodemon": "^2.0.15",
+  
+    
+  "pg": "^8.7.1",
+  
+    
+  "react": "^17.0.2",
+  
+    
+  "react-dom": "^17.0.2",
+  
+    
+  "react-parallax-tilt": "^1.5.86",
+  
+    
+  "react-scripts": "4.0.2",
+  
+    
+  "react-tsparticles": "^1.39.0",
+  
+    
+  "serve": "^13.0.2",
+  
+    
+  "tachyons": "^4.12.0",
+  
+    
+  "web-vitals": "^2.1.3"
+  
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "server": "nodemon server.js"
+  
+    
+  "start": "serve -s build",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "test": "react-scripts test",
+  
+    
+  "eject": "react-scripts eject",
+  
+    
+  "predeploy": "npm run build",
+  
+    
+  "deploy": "gh-pages -d build"
+  
   },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
   },
+  
   "devDependencies": {
-    "clarifai": "^2.9.1",
-    "gh-pages": "^3.2.3"
-  }}
+  
+    
+  "clarifai": "^2.9.1",
+  
+    
+  "gh-pages": "^3.2.3"
+  
+  }
+}
