--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "scripts": {
   
     
-  "start": "serve -s build",
+  "start": "react-scripts start",
   
     
   "build": "react-scripts build",
